# web-template-rs-example

./: Cargo.toml  README.md  build.rs  build.sh
src/: main.rs
src/templates/: profile_template.html
