[package]
name = "axum-html-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
minijinja = {version = "0.23.0", features = ["builtins"]}
serde = {version = "1.0.145", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
