[package]
name = "axum-html-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
minijinja = {version = "2", features = ["builtins"]}
minijinja-embed = "2.3.1"
serde = {version = "1.0.145", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
minijinja-embed = "2.3.1"
